android sdkmanager requires old modules